panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__string__test_string_literal_is_lvalue.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/string/test_string_literal_is_lvalue.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/string/test_string_literal_is_lvalue.c"
   (declaration external (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)) ∅)
   (function-definition external stack-size=56
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (hello~3 `ptr<array<char; ∅>>` @0)
            (addressof `ptr<array<char; 6>>` @0
               (string `array<char; 6>` @void "hello\0")))
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>) -> int>` @16
                  (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)))
               (noop-type-conversion `ptr<char const>` @24
                  (noop-type-conversion `ptr<char>` @24
                     (addressof `ptr<array<char; ∅>>` @24
                        (deref `array<char; ∅>` @24 (hello~3 `ptr<array<char; ∅>>` @0)))))))
         (expression
            (call `int` @8
               (addressof `ptr<fn(∅: ptr<char const>) -> int>` @16
                  (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)))
               (noop-type-conversion `ptr<char const>` @24
                  (addressof `ptr<char>` @24
                     (deref `char` @24
                        (noop-type-conversion `ptr<char>` @32
                           (addressof `ptr<array<char; 6>>` @32
                              (string `array<char; 6>` @void "world\0")))))))))))

----- stderr -----
