panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__string__test_string_literal_simple_escape_sequences.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/string/test_string_literal_simple_escape_sequences.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/string/test_string_literal_simple_escape_sequences.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=40
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @8
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 4>>` @16
                        (string `array<char; 4>` @void "%s\n\0"))))
               (noop-type-conversion `ptr<char>` @24
                  (addressof `ptr<array<char; 12>>` @24
                     (string `array<char; 12>` @void "abc?\"\'\\\'def\0")))))
         (return (truncate `int` @0 (2 `unsigned long` @8))))))

----- stderr -----
